<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_photo_way"
        android:textColor="#fff"
        />

    <Button
        android:id="@+id/phototocamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000"
        android:textColor="#fff"
        android:padding="10dp"
        android:text="@string/way_camera"
        />
    <Button
        android:id="@+id/phototoalbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/way_album"
        />
    <Button
        android:id="@+id/phototocancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:padding="10dp"
        android:text="@string/write_cancel"
        android:gravity="right"/>



</LinearLayout>