<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".UserLogin">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#fff"
        android:layout_marginBottom="50dp"
        android:src="@drawable/carimage"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/ln_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ln_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="267dp"
        android:background="@drawable/log_in_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="55px"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/tx_log_in_id" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ln_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:background="@drawable/log_in_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="55px"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/tx_log_in_password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_login_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_log_in"
            android:textColor="#fff"
            android:background="@drawable/call_button_background"
/>
        <Button
            android:id="@+id/bt_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginLeft="50dp"
            android:text="@string/bt_join"
            android:background="@drawable/call_button_background"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_login_kakao"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ln_login_selected" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:src="@drawable/kakao_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_path_kakao"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>