<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/today_news"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="20dp"
       android:layout_margin="20dp"
       android:background="@drawable/my_info_edge"
       android:backgroundTint="#000"
       >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="테스트 기사1"
           android:textColor="#fff"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:linksClickable="true"
           android:autoLink="web"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="테스트 기사2"
           android:textColor="#fff"
           android:layout_marginBottom="5dp"
           android:linksClickable="true"
           android:autoLink="web"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="테스트 기사3"
           android:textColor="#fff"
           android:layout_marginBottom="5dp"
           android:linksClickable="true"
           android:autoLink="web"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="테스트 기사4"
           android:textColor="#fff"
           android:layout_marginBottom="5dp"
           android:linksClickable="true"
           android:autoLink="web"/>
   </LinearLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_marginRight="15dp"
           android:layout_marginLeft="15dp"
           android:background="#e7e7e7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/check_insure_price"
            />

<!--            자차 보험료 확인 탭            -->
        <LinearLayout
            android:id="@+id/Ln_check_my_insure_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_directions_car_filled_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/check_insure_price_car"/>
        </LinearLayout>
        <!--            운전자 보험료 확인 탭            -->
        <LinearLayout
            android:id="@+id/Ln_check_my_insure_price_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_perm_identity_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/check_insure_price_driver"/>
        </LinearLayout>
        <!--            보험료 비교 탭            -->
        <LinearLayout
            android:id="@+id/Ln_compare_insure_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_compare_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/compare_insure"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e7e7e7"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/today_price"/>

        <!--            보험료 비교 탭            -->
        <LinearLayout
            android:id="@+id/Ln_Today_Cars_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_compare_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/today_car_price"/>
        </LinearLayout>

        <!--            보험료 비교 탭            -->
        <LinearLayout
            android:id="@+id/Ln_Today_Price_Mycar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_car_repair_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/today_mycar_price"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e7e7e7"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/use_question"/>

        <LinearLayout
            android:id="@+id/Ln_use_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_shopping_black_cart_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/use_sell"/>
        </LinearLayout>

        <!--            보험료 비교 탭            -->
        <LinearLayout
            android:id="@+id/Ln_use_TipCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_quiz_24"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="#000"
                android:layout_gravity="center"
                android:text="@string/how_use_tipcar"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>