<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".notice_board_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/notice_content_appname"
            android:textColor="#2196F3"
            android:textSize="18dp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="@null"
        android:fillViewport = "true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_content_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_title_content"
                    android:textColor="#000"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_write"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_writeuser"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_writeday"
                    android:textSize="10dp" />
            </LinearLayout>

            <View
                android:id="@+id/view_divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="#8E8787" />
            <ImageView
                android:id="@+id/Content_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_list_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/tv_content"
                android:textColor="#000" />


            <LinearLayout
                android:id="@+id/user_behavior_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_content">

                <!--        좋아요 버튼 생성       -->
                <LinearLayout
                    android:id="@+id/ln_favorite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_favorite_border_24" />

                    <TextView
                        android:id="@+id/tx_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:text="@string/content_favorite"
                        android:textColor="#000" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="#000" />

                <!--        댓글달기 버튼 생성       -->
                <LinearLayout
                    android:id="@+id/ln_commnet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_edit_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/content_comment"
                        android:textColor="#000" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:background="#000" />

                <!--        공유하기 버튼 생성       -->
                <LinearLayout
                    android:id="@+id/ln_share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_ios_share_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/content_share"
                        android:textColor="#000" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view_divider3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:background="#e7e7e7" />


            <TextView
                android:id="@+id/tx_no_comment_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/write_no_comment_state"
                android:textSize="30dp"
                android:visibility="gone" />




          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/comment_list"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:nestedScrollingEnabled="false"
              android:overScrollMode="never"
              android:clickable="true"
              android:contextClickable="true"
              android:layout_marginTop="1dp"
              android:layout_marginBottom="1dp"
               />
        </LinearLayout>





    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_comment_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <ImageView
            android:id="@+id/iv_moveto_gallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_image_24"/>
        <EditText
            android:id="@+id/tx_comment_write"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/content_recomment"/>
        <Button
            android:id="@+id/bt_comment_done"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_baseline_check_24"/>
    </LinearLayout>
</LinearLayout>